
AC_PREREQ(2.61)
AC_INIT([rapidStorm], [1.4.0], [dstorm at swolter dot sdf1 dot org])

AM_INIT_AUTOMAKE

AC_CONFIG_MACRO_DIR([../m4])

# Check for ISCC Inno Setup help compiler
AC_CHECK_PROGS([ISCC], [ISCC])
AC_CHECK_PROGS([WINE], [wine])

AC_CONFIG_FILES([Makefile dSTORM.iss build_installer.mk])
AC_OUTPUT
